Move /query/debug/state from plugins to http handlers
