# cardinal/server/server.go
@@ -175,4 +175,7 @@ func (s *Server) setupRoutes(
 
 	// Route: /cql
 	s.app.Post("/cql", handler.PostCQL(provider))
+
+	// Route: /debug/state
+	s.app.Post("/debug/state", handler.GetDebugState(provider))
 }
